# py_dir

./: README.rst  conftest.py  pyproject.toml
.github/workflows/: test.yml
py_dir/: main.py
tests/: add_test.py
