[tool.poetry]
name = "py-dir"
version = "0.1.0"
description = ""
authors = ["Jon Webb <webbja123@gmail.com>"]
readme = "README.rst"
packages = [{include = "py_dir"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-print = "^5.0.0"
tox = "^4.4.6"
pytest-cov = "^4.0.0"
pyupgrade = "^3.3.1"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.tox]
legacy_tox_ini = """
	[tox]
    env_list = py310, mypy, lint, coverage

    [testenv]
	description = run tests with pytest
    deps = pytest
    commands = pytest tests -v {posargs}

	[testeng:mypy]
	deps = mypy
	commands = mypy py_dir

	[testenv:lint]
	deps = pre-commit
	commands = pre-commit run --all-files --show-diff-on-failure

	[testenv:coverage]
	deps = pytest-cov
	commands =
		pytest --cov --cov-report term-missing --cov-report html --cov-append --cov-context=test --cov-fail-under=100 {posargs}

	[gh-actions]
	python =
		3.10: py310, mypy, lint, coverage
"""

[tool.mypy]
exclude = ["docs", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
console_output_style = "progress"

[project.urls]
"Homepage" = "https://github.com/Jon-Webb-79/py_dir"
